# loop-revops-agents

./: .env.example  .gitignore  AUDIT_OUTBOUNDER_2026_04_20.md  FREEZE.md  README.md  alembic.ini  pyproject.toml
agents/cs/: RUNBOOK.md  SKILL.md  __init__.py  dispatcher.py  integration_health.py  main.py  queries.py
agents/onboarding/: JACKIE_WALKTHROUGH.md  RUNBOOK.md  SKILL.md  SUNDAR_INTERFACE_SPEC.md  __init__.py  closed_won_poller.py  csm_enforcer.py  dispatcher.py  handoff_checklist.py  main.py  (+6 more)
docs/: AGENT_7_CONDUCTOR_SCOPE.md  BACKPORT_FROM_BLAINE.md  NEXT_SESSION_URKLE_MERGE.md  PHASE_REVIEW_PROMPT.md  duncan_phase_out_plan.md
infra/: bootstrap.sh  disclosure_text.md  env.template  install_launchd.sh  oauth_verification_checklist.md  tailscale_setup.md
scripts/: backport_from_blaine.sh  health_check.sh  load_seed_data.sh  run_migrations.sh  seed_sandbox.py  seed_slt_rep_config.py  setup_gcp_hub.sh
shared/: __init__.py  agent_base.py  file_ingest.py  governance.py  secrets.py  slack_dispatcher.py
tests/: conftest.py  test_agent_base.py  test_briefings_monitor_health.py  test_classifier.py  test_db_connection.py  test_dispatcher.py  test_dispatcher_health_path.py  test_file_ingest.py  test_fireflies_and_secrets.py  test_fireflies_mcp.py  test_governance.py  test_integration_health_checks.py  test_knowledge_and_launchd.py  test_lint_plugin.py  test_main_bootstrap.py  test_portability.py  test_salesforce_mcp.py  test_salesforce_mcp_governance.py  test_schedule_and_lint.py  test_schema.py  test_slack_dispatcher.py  test_slack_dispatcher_internals.py
(+419 files in other folders)
